--- a/views/layout.html
+++ b/views/layout.html
@@ -16,26 +16,29 @@
     <body>
 		<div class="top full-width">
 			<div class="block1">
-				<ul class="nav">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">My Account</a></li>
-					<li><a href="#">Register</a></li>
-				</ul>
-				<ul class="social">
-					<li><a href="#">facebook</a></li>
-					<li><a href="#">pintrest</a></li>
-				</ul>
+				<div class="site-width">
+					<ul class="nav">
+						<li><a href="#">Home</a></li>
+						<li><a href="#">My Account</a></li>
+						<li><a href="#">Register</a></li>
+					</ul>
+					<ul class="social">
+						<li><a href="#">facebook</a></li>
+						<li><a href="#">pintrest</a></li>
+					</ul>
+				</div>
 			</div>
 			<div class="zigzag"></div>
-			<div class="block2 site-width">
-				<ul class="nav">
-					<li><a href="#" class="logo">Sara's Prints</a></li>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Girls</a></li>
-					<li><a href="#">Boys</a></li>
-					<li><a href="#">UpPasta8-Fuzzy-Fleece</a></li>
-					<li><a></a></li>
-				</ul>
+			<div class="block2">
+				<div class="site-width">
+					<ul class="nav">
+						<li class="logo-container"><a href="#" class="logo"></a></li>
+						<li><a href="#" class="item"><span>Home</span></a></li>
+						<li><a href="#" class="item"><span>Girls</span></a></li>
+						<li><a href="#" class="item"><span>Boys</span></a></li>
+						<li><a href="#" class="item"><span>UpPasta8-Fuzzy-Fleece</span></a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<div class="full-width">
