typekit font addition

--- a/views/layout.html
+++ b/views/layout.html
@@ -8,6 +8,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+		<script type="text/javascript" src="//use.typekit.net/ody1owy.js"></script>
+		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
         <link href="/css/main.css" rel="stylesheet">
 		{% block head %}
 
