--- a/views/layout.html
+++ b/views/layout.html
@@ -37,7 +37,12 @@
 						<li><a href="#" class="item"><span>Home</span></a></li>
 						<li><a href="#" class="item"><span>Girls</span></a></li>
 						<li><a href="#" class="item"><span>Boys</span></a></li>
-						<li><a href="#" class="item"><span>UpPasta8-Fuzzy-Fleece</span></a></li>
+						<li><a href="#" class="item fuzzy-fleece"><span>UpPasta8-Fuzzy-Fleece</span></a></li>
+					</ul>
+					<ul class="cart-widget">
+						<li><a href="#" class="cart-icon"></a></li>
+						<li><div class="cart-text">0 items</div></li>
+						<li><div class="cart-money">$0.00</div></li>
 					</ul>
 				</div>
 			</div>
