--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,10 +42,12 @@ body {
 .top .block1 .nav a {
 	color:#fff;
 	text-decoration:none;
-	font-weight:200;
+	font-weight:300;
+	font-size:15px;
 }
 .top .block1 .nav a.item {
 	display:inline-block;
+	font-weight:200;
 }
 .top .block1 .nav a:hover {
 	text-decoration:underline;
@@ -63,31 +65,43 @@ body {
 	border-bottom:1px solid #ccc;
 	height:60px;
 	margin-top:35px;	
+	margin-bottom:50px;
 }
 .top .block2 .nav {
-	vertical-align:middle;
+
 }
-.top .block2 .nav a {
+.top .block2 .nav a.item {
 	display:inline-block;
-	vertical-align:top;
+	height:60px;
+	color:#0098ce;
+	text-transform:uppercase;
 }
-.top .block2 .nav a span {
+.top .block2 .nav a.item:hover {
+	background-color:#0098ce;
+	color:#fff;
+}
+.top .block2 .nav a.item span {
 	display:inline-block;
+	padding:18px 30px 0 30px;
 }
-.top .logo-container {
+.top .block2 .nav a.item.fuzzy-fleece {
+	background-image:url (/img/fuzzy-fleece.png);
+}
+.top .block2 .nav li.logo-container {
 	display:inline-block;
 	position:relative;
 	width:176px;
 }
-.top .logo {
+.top .block2 .nav li a.logo {
 	display:block;
 	position:absolute;
 	width:176px;
 	height:122px;
 	background-image:url(/img/saras-prints.png);
 	font-size:0;
-	top:-45px;
+	top:-60px;
 	left:0;
+	padding-top:0;
 }
 
 
