--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,33 +60,12 @@ body {
 .top .block1 .social a {
 	font-size:0;
 }
-
 .top .block2 {
 	border-top:1px solid #ccc;
 	border-bottom:1px solid #ccc;
 	height:60px;
 	margin-top:35px;	
 	margin-bottom:50px;
-}
-.top .block2 .nav {
-	float:left;
-}
-.top .block2 .nav a.item {
-	display:inline-block;
-	height:60px;
-	color:#0098ce;
-	text-transform:uppercase;
-}
-.top .block2 .nav a.item:hover {
-	background-color:#0098ce;
-	color:#fff;
-}
-.top .block2 .nav a.item span {
-	display:inline-block;
-	padding:18px 30px 0 30px;
-}
-.top .block2 .nav a.item.fuzzy-fleece {
-	background-image:url (/img/fuzzy-fleece.png);
 }
 .top .block2 .nav li.logo-container {
 	display:inline-block;
@@ -104,11 +83,40 @@ body {
 	left:0;
 	padding-top:0;
 }
+.top .block2 .nav {
+	float:left;
+}
+.top .block2 .nav a.item {
+	display:inline-block;
+	height:60px;
+	color:#0098ce;
+	text-transform:uppercase;
+	vertical-align:middle;
+}
+.top .block2 .nav a.item:hover {
+	background-color:#0098ce;
+	color:#fff;
+}
+.top .block2 .nav a.item span {
+	display:inline-block;
+	padding:18px 30px 0 30px;
+}
+.top .block2 .nav a.item.fuzzy-fleece {
+	height:60px;
+	width:120px;
+	background-image:url(/img/fuzzy-fleece.png);
+	font-size:0;
+	padding:0;
+	background-position:center center;
+	background-repeat:no-repeat;
+}
+.top .block2 .nav a.item.fuzzy-fleece span{
+	display:none;
+}
 .top .block2 .cart-widget {
 	display:block;
 	float:right;
 	padding-top:18px;
 	color:#0098ce;
 }
-
 
