--- a/views/layout.html
+++ b/views/layout.html
@@ -20,27 +20,14 @@
 			<div class="block1">
 				<div class="site-width">
 					<ul class="nav">
-						<li><a href="#" class="item home-icon">Home</a></li>
-						<li><a href="#" class="item myaccount-icon">My Account</a></li>
-						<li><a href="#" class="item register-icon">Register</a></li>
-					</ul>
-					<ul class="social">
-						<li><a href="#" class="item fb-icon">Facebook</a></li>
-						<li><a href="#" class="item pintrest-icon">Pintrest</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="block2">
-				<div class="site-width">
-					<ul class="nav">
 						<li class="logo-container"><a href="#" class="logo"></a></li>
-						<li><a href="#" class="item"><span>Home</span></a></li>
-						<li><a href="#" class="item"><span>Girls</span></a></li>
-						<li><a href="#" class="item"><span>Boys</span></a></li>
+						<li><a href="#" class="item"><span>home</span></a></li>
+						<li><a href="#" class="item"><span>my account</span></a></li>
+						<li><a href="#" class="item"><span>sign in</span></a></li>
 						<li><a href="#" class="item fuzzy-fleece"><span>UpPasta8-Fuzzy-Fleece</span></a></li>
+						<li><a href="#" class="item cart-icon"><span>cart</span></a></li>
 					</ul>
 					<ul class="cart-widget">
-						<li><a href="#" class="cart-icon"></a></li>
 						<li><div class="cart-text">0 items</div></li>
 						<li><div class="cart-money">$0.00</div></li>
 					</ul>
