--- a/views/layout.html
+++ b/views/layout.html
@@ -17,24 +17,12 @@
     </head>
     <body>
 		<div class="top full-width">
-			<div class="block1">
-				<div class="site-width">
-					<ul class="nav">
-						<li class="logo-container"><a href="#" class="logo"></a></li>
-						<li><a href="#" class="item"><span>home</span></a></li>
-						<li><a href="#" class="item"><span>my account</span></a></li>
-						<li><a href="#" class="item"><span>sign in</span></a></li>
-						<li><a href="#" class="item fuzzy-fleece"><span>UpPasta8-Fuzzy-Fleece</span></a></li>
-						<li><a href="#" class="item cart-icon"><span>cart</span></a></li>
-					</ul>
-					<ul class="cart-widget">
-						<li><div class="cart-text">0 items</div></li>
-						<li><div class="cart-money">$0.00</div></li>
-					</ul>
-				</div>
+			<div class="banner">
+				<a href="/" class="logo"></a>
+				<a href="/up-pasta-8" class="up-pasta-8"></a>
 			</div>
 		</div>
-		<div class="full-width">
+		<div class="middle full-width">
 			<div class="site-width">
 	        {% block content %}
 
@@ -73,7 +61,6 @@
         {% block foot %}
 
 		{% endblock %}
-<<<<<<< HEAD
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -84,11 +71,9 @@
 		  ga('send', 'pageview');
 		
 		</script>
-=======
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 		<script src="/js/plugins/swig.pack.min.js"></script>
 		<script src="/js/app.js"></script>
->>>>>>> 7c3063ba55ac9dc1f79f30842f2a2079ddaef64a
     </body>
 </html>
