--- a/views/layout.html
+++ b/views/layout.html
@@ -20,6 +20,9 @@
 			<div class="banner">
 				<a href="/" class="logo"></a>
 				<a href="/up-pasta-8" class="up-pasta-8"></a>
+				<a href="/cart" class="cart"></a>
+				<a href="#" class="facebook"></a>
+				<a href="#" class="pintrest"></a>
 			</div>
 		</div>
 		<div class="middle full-width">
