change to "up past 8" not "up pasta 8"

--- a/views/layout.html
+++ b/views/layout.html
@@ -19,7 +19,7 @@
 		<div class="top full-width">
 			<div class="banner">
 				<a href="/" class="logo"></a>
-				<a href="/up-pasta-8" class="up-pasta-8"></a>
+				<a href="/up-past-8" class="up-past-8"></a>
 				<a href="/cart" class="cart"></a>
 				<a href="#" class="facebook"></a>
 				<a href="#" class="pintrest"></a>
