--- a/views/layout.html
+++ b/views/layout.html
@@ -23,35 +23,53 @@
 				<a href="/cart" class="cart"></a>
 				<a href="#" class="facebook"></a>
 				<a href="#" class="pintrest"></a>
+				<ul class="topnav">
+					<li><a href="">home</a></li>
+					<li><a href="">my account</a></li>
+					<li><a href="">sign in</a></li>
+				</ul>
+				<ul class="productsnav">
+					<li><a href="">home</a></li>
+					<li><a href="">pjs for girls</a></li>
+					<li><a href="">pjs for boys</a></li>
+					<li><a href="">fuzzy fleece</a></li>
+					<li><a href="">sale</a></li>
+				</ul>
+				<ul class="items">
+					<li><a href="">0 items</a></li>
+					<li>0.00</li>
+				</ul>
 			</div>
 		</div>
 		<div class="middle full-width">
 			<div class="site-width">
-	        {% block content %}
+				<div class="middle-banner">
+	        		{% block content %}
 
-			{% endblock %}
+					{% endblock %}
+				</div>
 			</div>
 		</div>
 		<div class="bottom full-width">
-			<div class="footer">
-				<div class="site-width">
+			<div class="site-width">
+				<div class="footer">
 					<ul>
-						<li><span class="header">Customer Service</span></li>
-						<li><a href="#">FAQ</a></li>
-						<li><a href="#">MY ACCOUNT</a></li>
-						<li><a href="#">SIZING CHART</a></li>
-						<li><a href="#">REGISTER</a></li>
-						<li><a href="#">SITE MAP</a></li>
+						<li><span class="header">customer service</span></li>
+						<li><a href="#">faq</a></li>
+						<li><a href="#">my account</a></li>
+						<li><a href="#">sizing</a></li>
+						<li><a href="#">site map</a></li>
 					</ul>
 					<ul>
-						<li><span class="header">About Us</span></li>
-						<li><a href="#">SARA'S PRINTS STORY</a></li>
-						<li><a href="#">MEET THE TEAM</a></li>
+						<li><span class="header">the sara's print's story</span></li>
+						<li><a href="#">how to keep kids safe</a></li>
+						<li><a href="#">and comfortable</a></li>
 					</ul>
 					<ul>
-						<li><span class="header">Contact Us</span></li>
-						<li><span>1 (888) 477-4687</span></li>
-						<li><a href="#">EMAIL</a></li>
+						<li><span class="header">contact us</span></li>
+						<li><span>1-888-4-PRINTS</span></li>
+						<li><span>(1-800-477-4687)</span></li>
+						<li><a href="#">info@sarasprints.com</a></li>
 					</ul>
 				</div>
 			</div>
