--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,7 +5,7 @@
 body {
 	margin:0;
 	padding:0;
-	background-color:#f6f9f9;
+	background-color:#fff;
 }
 .full-width {
 	position:relative;
@@ -18,6 +18,7 @@ body {
 	height:207px;
 	background-image:url(/img/top-bg-stripe.png);
 	margin-top:10px;
+	margin-bottom:20px;
 }
 .top .banner {
 	margin:0 auto;
@@ -43,10 +44,10 @@ body {
 	top:39px;
 }
 .top .cart {
-	width:55px;
+	width:52px;
 	height:60px;
 	position:absolute;
-	left:896px;
+	left:900px;
 	top:56px;
 }
 .top .facebook {
@@ -62,4 +63,84 @@ body {
 	position:absolute;
 	left:1076px;
 	bottom:5px;
+}
+.top ul.topnav {
+	display:inline-block;
+	position:absolute;
+	list-style:none;
+	left:260px;
+	top:50px;
+}
+.top ul.topnav li {
+	list-style:none;
+	display:inline-block;
+	padding-right:58px;
+	margin:0;
+	font-size:28px;
+	text-align:center;
+}
+.top ul.topnav li a {
+	color:#fff;
+	list-style:none;
+	text-decoration:none;
+}
+.top ul.productsnav {
+	display:inline-block;
+	position:absolute;
+	list-style:none;
+	left:262px;
+	bottom:19px;
+}
+.top ul.productsnav li {
+	list-style:none;
+	display:inline-block;
+	padding-right:60px;
+	margin:0;
+	font-size:22px;
+	text-align:center;
+}
+.top ul.productsnav li a {
+	color:#707070;
+	list-style:none;
+	text-decoration:none;
+}
+.middle .middle-banner {
+	display:block;
+	border-style:solid;
+	border-width:1px;
+	height:500px;
+	width:980px
+}
+.bottom .footer {
+	display:inline-block;
+	width:980px;
+	background-color:#1898ce;
+	text-align:center;
+}
+.bottom .header {
+	display:block;
+	color:#fff;
+	margin-bottom:22px;
+	font-size:20px;
+	font-weight:400;
+}
+.bottom ul {
+	display:inline-block;
+	list-style:none;
+	text-decoration:none;
+	vertical-align:top;
+	text-align:left;
+	padding:0;
+	margin:20px 0;
+}
+.bottom .footer ul li {
+	padding:0 80px 0 80px;
+}
+.bottom .footer ul li a {
+	text-decoration:none;
+	color:#fff;
+	font-size:17px;
+}
+.bottom .footer ul li span {
+	color:#fff;
 }
