--- a/public/css/main.css
+++ b/public/css/main.css
@@ -114,7 +114,7 @@ body {
 .bottom .footer {
 	display:inline-block;
 	width:980px;
-	background-color:#1898ce;
+	background-color:#3cbef6;
 	text-align:center;
 }
 .bottom .header {
