--- a/views/layout.html
+++ b/views/layout.html
@@ -37,6 +37,7 @@
 				</ul>
 				<ul class="items">
 					<li><a href="">0 items</a></li>
+					<li>|</li>
 					<li>0.00</li>
 				</ul>
 			</div>
@@ -52,6 +53,8 @@
 		</div>
 		<div class="bottom full-width">
 			<div class="site-width">
+				<div class="subscribe">					
+				</div>
 				<div class="footer">
 					<ul>
 						<li><span class="header">customer service</span></li>
