--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,69 +14,48 @@ body {
 	max-width:980px;
 	margin:0 auto;
 }
-.top {
-	height:207px;
-	background-image:url(/img/top-bg-stripe.png);
-	margin-top:20px;
-	margin-bottom:20px;
-}
 .top .banner {
 	margin:0 auto;
-	width:1168px;
-	height:207px;
+	width:980px;
+	height:189px;
 	background-image:url(/img/top-banner.png);
+	background-repeat:no-repeat;
 	position:relative;
 }
-.top .logo {
-	width:258px;
-	height:178px;
-	position:absolute;
-	left:0;
-	top:0;
-}
 .top .up-past-8 {
-	width:158px;
-	height:103px;
+	width:125px;
+	height:85px;
 	position:absolute;
-	left:0;
-	top:0;
-	left:734px;
-	top:39px;
-}
-.top .cart {
-	width:52px;
-	height:60px;
-	position:absolute;
-	left:900px;
-	top:56px;
+	left:626px;
+	top:45px;
 }
 .top .facebook {
-	width:64px;
-	height:63px;
+	width:50px;
+	height:50px;
 	position:absolute;
-	left:1002px;
-	bottom:5px;
+	left:845px;
+	bottom:10px;
 }
 .top .pintrest {
-	width:64px;
-	height:63px;
+	width:50px;
+	height:50px;
 	position:absolute;
-	left:1076px;
-	bottom:5px;
+	left:905px;
+	bottom:10px;
 }
 .top ul.topnav {
 	display:inline-block;
 	position:absolute;
 	list-style:none;
-	left:260px;
-	top:50px;
+	left:223px;
+	top:55px;
 }
 .top ul.topnav li {
 	list-style:none;
 	display:inline-block;
 	padding-right:58px;
 	margin:0;
-	font-size:28px;
+	font-size:22px;
 	text-align:center;
 }
 .top ul.topnav li a {
@@ -88,15 +67,15 @@ body {
 	display:inline-block;
 	position:absolute;
 	list-style:none;
-	left:262px;
-	bottom:19px;
+	left:224px;
+	bottom:15px;
 }
 .top ul.productsnav li {
 	list-style:none;
 	display:inline-block;
-	padding-right:60px;
+	padding-right:48px;
 	margin:0;
-	font-size:22px;
+	font-size:19px;
 	text-align:center;
 }
 .top ul.productsnav li a {
@@ -107,7 +86,7 @@ body {
 .top ul.items {
 	position:absolute;
 	display:inline-block;
-	right:55px;
+	right:35px;
 	top:60px;
 }
 .top ul.items li {
@@ -121,18 +100,29 @@ body {
 	text-decoration:none;
 	color:#fff;
 }
-.middle .middle-banner {
+.middle .top-banner {
 	display:block;
 	background-color:#fff;
-	height:500px;
-	width:980px
+	background-image:url(/img/bannersample.png);
+	height:519px;
+	width:981px
 }
 .bottom .subscribe {
 	display:block;
+	position:relative;
 	width:980px;
 	height:192px;
 	background-color:#fff;
 	margin-top:10px;
+}
+.bottom .slogan {
+	position:absolute;
+	top:10px;
+	left:10px;
+}
+.bottom .slogan span {
+	font-weight:200;
+	color:#;
 }
 .bottom .footer {
 	display:inline-block;
