--- a/views/layout.html
+++ b/views/layout.html
@@ -44,7 +44,7 @@
 		</div>
 		<div class="middle full-width">
 			<div class="site-width">
-				<div class="middle-banner">
+				<div class="top-banner">
 	        		{% block content %}
 
 					{% endblock %}
@@ -53,7 +53,8 @@
 		</div>
 		<div class="bottom full-width">
 			<div class="site-width">
-				<div class="subscribe">					
+				<div class="subscribe">	
+					<div class="slogan"><span>if you love sara's, you'll adore our other brands...</span></div>			
 				</div>
 				<div class="footer">
 					<ul>
