--- a/views/layout.html
+++ b/views/layout.html
@@ -49,12 +49,23 @@
 
 					{% endblock %}
 				</div>
+				<div class="products">
+					<div class="title">
+						<span>best sellers</span>
+					</div>
+					<div class="productsbar"></div>
+				</div>
 			</div>
 		</div>
 		<div class="bottom full-width">
 			<div class="site-width">
-				<div class="subscribe">	
-					<div class="slogan"><span>if you love sara's, you'll adore our other brands...</span></div>			
+				<div class="newsletter">	
+					<div class="slogan"><span>if you love sara's, you'll adore our other brands...</span></div>	
+					<div class="awlogo"></div>
+					<div class="pinklogo"></div>
+					<a href="#" class="subscribebar"><span>subscribe</span></a>	
+					<div class="email"></div>
+					<div class="signup"><span>sign up for event and promotions</span></div>
 				</div>
 				<div class="footer">
 					<ul>
@@ -78,10 +89,12 @@
 				</div>
 			</div>
 		</div>
-		<div class="site-width">
-			<div class="copyright">
-	        	<span>&copy;{{year}} Sara's Prints.</span> All Rights Reserved
-	    	</div>
+		<div class="last full-width">
+			<div class="site-width">
+				<div class="copyright">
+	        		<span>&copy;{{year}} Sara's Prints.</span> All Rights Reserved
+	    		</div>
+			</div>
 		</div>
         {% block foot %}
 
