--- a/views/layout.html
+++ b/views/layout.html
@@ -55,18 +55,20 @@
 					</div>
 					<div class="productsbar"></div>
 				</div>
+				<div class="newsletterContainer">	
+					<div class="slogan"><span>if you love sara's, you'll adore our other brands...</span></div>	
+					<div class="awlogo"></div>
+					<div class="pinklogo"></div>
+					<form action="subscribe.html" class="subscribebar">
+						<input type="text" name="subscribeemail" placeholder="add your email" class="subscribeemail"/> 
+						<button class="subscribetext"><span>subscribe</span></button>
+				    </form>
+					<div class="signup"><span>sign up for event and promotions</span></div>
+				</div>
 			</div>
 		</div>
 		<div class="bottom full-width">
 			<div class="site-width">
-				<div class="newsletter">	
-					<div class="slogan"><span>if you love sara's, you'll adore our other brands...</span></div>	
-					<div class="awlogo"></div>
-					<div class="pinklogo"></div>
-					<a href="#" class="subscribebar"><span>subscribe</span></a>	
-					<div class="email"></div>
-					<div class="signup"><span>sign up for event and promotions</span></div>
-				</div>
 				<div class="footer">
 					<ul>
 						<li><span class="header">customer service</span></li>
