--- a/views/layout.html
+++ b/views/layout.html
@@ -94,7 +94,8 @@
 		<div class="last full-width">
 			<div class="site-width">
 				<div class="copyright">
-	        		<span>&copy;{{year}} Sara's Prints.</span> All Rights Reserved
+	        		<span>Copyright &copy;{{year}} by Sara's Prints | All Rights Reserved | Privacy & Security</span>
+					<div class="ccimages"></div>
 	    		</div>
 			</div>
 		</div>
